# appsec_ctf_playground

./: Cargo.toml  README.md
src/: main.rs
static/: admin.html  flag.html  index.html  login.html  sign_up.html  user_profile.html
