[package]
name = "ctf_decoded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
tokio-postgres = "0.7.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
ring = "0.16.20"
rand = "0.8.3"
base64 = "0.20.0"
tokio = { version = "1.28.2", features = ["full"] }
sha2 = "0.10.0"
dashmap = "5.4.0"
hex = "0.4.3"
dotenv = "0.15.0"
